[package]
name = "hnf"
authors = ["Oto Brglez <otobrglez@gmail.com>"]
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
log4rs = "1.2.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
ureq = { version = "2.9.1", features = ["json"] }
